fix login form to narrow on mobile

--- a/assets/css/pages/auth.scss
+++ b/assets/css/pages/auth.scss
@@ -6,10 +6,17 @@
   transform: perspective(900px);
   opacity: 1;
   transition: opacity 0.1s ease-in-out, transform 0.5s ease-in-out;
+  width: 95vw;
 }
 .login-container .hide-login-form-box {
   transform: perspective(900px) rotateX(90deg);
   opacity: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .login-container .login-form-box {
+    width: 100%;
+  }
 }
 
 /*
